--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,3 +1,6 @@
 @import './Error/Error.css';
 @import './Loading/Loading.css';
 @import './Header/Header.css';
+@import './Home/Home.css';
+@import './Login/Login.css';
+@import './LoginRedirect/LoginRedirect.css';
