enabled request creation

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -4,3 +4,6 @@
 @import './Home/Home.css';
 @import './Login/Login.css';
 @import './LoginRedirect/LoginRedirect.css';
+@import './Form/Form.css';
+@import './Request/Request.css';
+@import './Requests/Requests.css';
