--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,33 +10,38 @@
   z-index: 1;
 }
 
+#green {
+  color: #00ad9f;
+}
+
 @media (max-width: 600px) {
   #Header {
     padding: 16px;
   }
 }
 
-#Header-banner h2 {
-  margin: 2px 0;
-  color: #00ad9f;
-}
+#Header-banner {
+  h2 {
+    margin: 2px 0;
+  }
 
-#Header-banner aside {
-  font-size: 8px;
-  opacity: 0.6;
+  aside {
+    font-size: 8px;
+    opacity: 0.6;
+  }
 }
 
 #Header-profile {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-}
 
-#Header-profile img {
-  width: 48px;
-  height: 48px;
-  object-fit: cover;
-  border-radius: 50%;
+  img {
+    width: 48px;
+    height: 48px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
 }
 
 #Header-user-info {
@@ -44,22 +49,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
-}
 
-#Header-user-info * {
-  margin: 0;
-  padding: 2px 8px;
-}
+  * {
+    margin: 0;
+    padding: 2px 8px;
+  }
 
-#Header-user-info aside {
-  font-size: 10px;
-}
+  aside {
+    font-size: 10px;
+  }
 
-#Header-user-info button {
-  border: none;
-  background: none;
-  font-size: 10px;
-  color: blue;
-  text-decoration: underline;
-  cursor: pointer;
+  button {
+    border: none;
+    background: none;
+    font-size: 10px;
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
