--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -6,3 +6,5 @@
 @import './Form/Form.scss';
 @import './Request/Request.scss';
 @import './Requests/Requests.scss';
+@import './CreateProfile/CreateProfile.scss';
+@import './EditProfile/EditProfile.scss';
