--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,10 +8,11 @@
   justify-content: space-between;
   align-items: center;
   z-index: 1;
+  color: #4a4a4a;
 }
 
 #green {
-  color: #00ad9f;
+  color: #27aa9f;
 }
 
 @media (max-width: 600px) {
@@ -21,8 +22,10 @@
 }
 
 #Header-banner {
+  align-items: center;
   h2 {
     margin: 2px 0;
+    padding-top: 16px;
   }
 
   aside {
@@ -41,6 +44,10 @@
     height: 48px;
     object-fit: cover;
     border-radius: 50%;
+  }
+
+  .menu {
+    cursor: pointer;
   }
 }
 
