--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -23,4 +23,12 @@
       margin-bottom: 10px;
     }
   }
+
+  button {
+    width: 90vw;
+    border-radius: 45px;
+    color: white;
+    border: none;
+    background-color: #27aa9f;
+  }
 }
