--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,3 +1,9 @@
-Link {
-  color: #c5c5c4;
+#Home {
+  Link {
+    color: #c5c5c4;
+  }
+  a {
+    color: #27aa9f;
+    text-decoration: none;
+  }
 }
