centered bottom text on login confirmation

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -64,6 +64,10 @@
   p {
     position: absolute;
     bottom: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   a {
