styled requests view

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,4 +1,7 @@
 #request-creation-form {
+  * {
+    font-family: 'Montserrat', sans-serif;
+  }
   .request-creation-form-field {
     display: flex;
     justify-content: space-between;
