--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+@import '@sharingexcess/designsystem/build/index.scss';
 @import './animations.scss';
 @import './theme.scss';
 @import '../components/index.scss';
