--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -18,6 +18,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.green {
+  color: #00ad9f;
+}
+
 .page {
   position: relative;
   width: 100vw;
