--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,6 +9,9 @@
   align-items: center;
   z-index: 1;
   color: #4a4a4a;
+  background-color: white;
+  border: 3px solid black;
+  border-bottom: none;
 }
 
 #green {
@@ -31,6 +34,11 @@
   aside {
     font-size: 8px;
     opacity: 0.6;
+  }
+
+  a {
+    text-decoration: none;
+    color: #4a4a4a;
   }
 }
 
