--- a/src/components/Request/Request.scss
+++ b/src/components/Request/Request.scss
@@ -1,14 +1,20 @@
 #request-container {
-  border: 1px solid black;
-  border-radius: 5px;
+  border-bottom: 1px solid black;
   margin-bottom: 5px;
-  padding: 0 5px;
+  padding: 5px;
 
   h3 {
-    color: #00ad9f;
+    color: #4a4a4a;
   }
 
   p {
     color: #c5c5c4;
+  }
+  aside {
+    color: #4ea528;
+  }
+  #school {
+    display: flex;
+    justify-content: space-between;
   }
 }
