--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .green {
-  color: #00ad9f;
+  color: #4ea528;
 }
 
 .page {
@@ -31,7 +31,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 96px 64px;
-  border: 3px solid black;
+  // border: 3px solid black;
 }
 
 @media (max-width: 600px) {
