--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -32,6 +32,6 @@
     border-radius: 45px;
     color: white;
     border: none;
-    background-color: #27aa9f;
+    background-color: #4ea528;
   }
 }
