--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -28,8 +28,9 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  min-height: 100vh;
   padding: 96px 64px;
   // border: 3px solid black;
 }
