--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
+  height: 64px;
   width: 100vw;
-  padding: 32px;
   display: flex;
   justify-content: space-between;
   align-items: center;
