--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -32,11 +32,10 @@ body {
   align-items: center;
   min-height: 100vh;
   padding: 96px 64px;
-  // border: 3px solid black;
 }
 
 @media (max-width: 600px) {
   .page {
-    padding: 48px 16px;
+    padding: 64px 16px 0 16px;
   }
 }
