made home page show open requests. made user photo show next to message

--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -8,7 +8,7 @@
     border-radius: 45px;
     color: white;
     border: none;
-    background-color: #27aa9f;
+    background-color: #4ea528;
   }
 
   textarea {
@@ -31,6 +31,7 @@
 
     label {
       color: #4a4a4a;
+      margin-right: 16px;
     }
 
     input {
@@ -62,7 +63,7 @@
       padding: 8px;
       bottom: -4px;
       right: -8px;
-      background-color: #27aa9f;
+      background-color: #4ea528;
       color: white;
       position: absolute;
       border: 4px solid white;
