--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -7,9 +7,9 @@
       max-width: 70%;
       margin-top: 16px;
       border-radius: 24px;
-      padding: 8px 16px;
+      padding: 0px 8px;
       &.sent {
-        text-align: right;
+        text-align: left;
         background: var(--se-green-primary);
         color: var(--se-white);
         margin-left: auto;
@@ -18,10 +18,24 @@
         }
       }
       &.received {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         text-align: left;
-        background: var(--se-grey-light);
         color: var(--se-black);
         margin-right: auto;
+        img {
+          width: 48px;
+          height: 48px;
+          object-fit: cover;
+          border-radius: 50%;
+          margin-right: 5px;
+        }
+        p {
+          border: 1px solid var(--se-black);
+          border-radius: 24px;
+          padding: 8px;
+        }
         & + .received {
           margin-top: 4px;
         }
