--- a/src/components/Request/Request.scss
+++ b/src/components/Request/Request.scss
@@ -1,4 +1,11 @@
 #request-details {
+  #request-details-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 32px;
+  }
   img {
     width: 48px;
     height: 48px;
