--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -4,40 +4,59 @@
     overflow-y: auto;
 
     .Message {
-      max-width: 70%;
+      max-width: 80%;
       margin-top: 16px;
-      border-radius: 24px;
-      padding: 0px 8px;
+      display: flex;
+      align-items: flex-start;
+      .MessagePhoto {
+        width: 24px;
+        height: 24px;
+        overflow: hidden;
+        flex-shrink: 0;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+      .se-text {
+        border-radius: 16px;
+        padding: 8px 12px;
+      }
       &.sent {
-        text-align: left;
-        background: var(--se-green-primary);
+        flex-direction: row-reverse;
+        justify-content: flex-end;
         color: var(--se-white);
         margin-left: auto;
         & + .sent {
           margin-top: 4px;
         }
+        .se-text {
+          text-align: right;
+          background: var(--se-green-primary);
+          color: var(--se-white);
+        }
+        .MessagePhoto {
+          margin-left: 8px;
+        }
       }
       &.received {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: flex-start;
         text-align: left;
         color: var(--se-black);
         margin-right: auto;
-        img {
-          width: 48px;
-          height: 48px;
-          object-fit: cover;
-          border-radius: 50%;
-          margin-right: 5px;
-        }
-        p {
-          border: 1px solid var(--se-black);
-          border-radius: 24px;
-          padding: 8px;
-        }
         & + .received {
           margin-top: 4px;
+        }
+        .se-text {
+          text-align: left;
+          background: var(--se-white);
+          color: var(--se-black);
+          border: 1px solid var(--se-black);
+        }
+        .MessagePhoto {
+          margin-right: 8px;
         }
       }
     }
@@ -56,8 +75,10 @@
     #Chat-send {
       height: 32px;
       width: 32px;
+      padding: 0;
       border-radius: 50%;
       flex-shrink: 0;
+      flex-grow: 0;
       text-align: center;
       display: flex;
       justify-content: center;
