adding menu, ability to open, complete, reopen, and accept request, styling, etc

--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -1,7 +1,5 @@
-#profile-edit {
-  * {
-    font-family: 'Montserrat', sans-serif;
-  }
+#Profile {
+  @include page;
 
   button {
     width: 90vw;
