--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -1,4 +1,8 @@
-#Loading h1 {
-  animation: spin 4s infinite linear;
-  font-size: 96px;
+#Loading {
+  @include page;
+
+  .primary-header {
+    animation: spin 4s infinite linear;
+    font-size: 96px;
+  }
 }
