--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -9,3 +9,5 @@
 @import './Request/Request.scss';
 @import './Requests/Requests.scss';
 @import './Chat/Chat.scss';
+@import './Menu/Menu.scss';
+@import './Help/Help.scss';
