--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -1,16 +1,41 @@
 #Chat {
+  @include page;
+
+  #Chat-header {
+    padding-bottom: 24px;
+    z-index: 2;
+    background: linear-gradient(
+      rgba(255, 255, 255, 1) 0,
+      rgba(255, 255, 255, 1) 24px,
+      rgba(255, 255, 255, 0) 100%
+    );
+
+    #Chat-request-title {
+      padding: 0 24px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+
   #Chat-messages {
-    height: calc(100% - 96px);
+    position: relative;
+    height: calc(100% - 32px);
     overflow-y: auto;
+    padding-bottom: 80px;
+    margin-top: -24px;
 
     .Message {
       max-width: 80%;
       margin-top: 16px;
       display: flex;
       align-items: flex-start;
+      flex-wrap: wrap;
+
       .MessagePhoto {
         width: 24px;
         height: 24px;
+        margin-top: 8px;
         overflow: hidden;
         flex-shrink: 0;
         img {
@@ -20,23 +45,51 @@
           border-radius: 50%;
         }
       }
-      .se-text {
-        border-radius: 16px;
+      .Message-text {
+        border-radius: 32px;
         padding: 8px 12px;
+        font-size: 14px;
+        font-weight: 500;
+        max-width: calc(100% - 32px);
       }
+
+      .Message-timestamp {
+        width: 100%;
+        padding-top: 4px;
+        transition: all 0.32s ease;
+        height: 0;
+        opacity: 0;
+      }
+
+      &.active {
+        .Message-timestamp {
+          height: 24px;
+          opacity: 1;
+        }
+      }
+
       &.sent {
         flex-direction: row-reverse;
         justify-content: flex-end;
         color: var(--se-white);
         margin-left: auto;
+
         & + .sent {
           margin-top: 4px;
         }
-        .se-text {
+
+        .Message-text {
           text-align: right;
           background: var(--se-green-primary);
           color: var(--se-white);
+          margin-left: auto;
         }
+
+        .Message-timestamp {
+          text-align: right;
+          margin-right: 32px;
+        }
+
         .MessagePhoto {
           margin-left: 8px;
         }
@@ -46,15 +99,23 @@
         text-align: left;
         color: var(--se-black);
         margin-right: auto;
+
         & + .received {
           margin-top: 4px;
         }
-        .se-text {
+
+        .Message-text {
           text-align: left;
-          background: var(--se-white);
+          background: var(--se-grey-light);
           color: var(--se-black);
-          border: 1px solid var(--se-black);
+          margin-right: auto;
         }
+
+        .Message-timestamp {
+          text-align: left;
+          margin-left: 32px;
+        }
+
         .MessagePhoto {
           margin-right: 8px;
         }
@@ -64,12 +125,20 @@
 
   #Chat-new-message {
     position: fixed;
+    left: 0;
     bottom: 0;
-    padding: 16px;
+    padding: 24px 16px;
+    background: linear-gradient(
+      rgba(255, 255, 255, 0) 0,
+      rgba(255, 255, 255, 1) 24px,
+      rgba(255, 255, 255, 1) 100%
+    );
 
     input {
-      box-shadow: inset 2px 2px 2px var(--se-black-transparent);
-      padding: 8px;
+      border: 2px solid var(--se-grey-light);
+      padding: 12px 16px;
+      width: 100%;
+      border-radius: 32px;
     }
 
     #Chat-send {
