--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import '@sharingexcess/designsystem/build/index.scss';
+@import './design_system_overrides.scss';
 @import './animations.scss';
 @import './theme.scss';
 @import '../components/index.scss';
