--- a/src/components/Error/Error.scss
+++ b/src/components/Error/Error.scss
@@ -1,14 +1,8 @@
-#Error h1 {
-  font-size: 96px;
-}
+#Error {
+  @include page;
 
-#Error p {
-  text-align: center;
-}
-
-#Error aside {
-  font-size: 10px;
-  text-align: center;
-  opacity: 0.6;
-  font-style: italic;
+  h1 {
+    font-size: 96px;
+    margin: 0;
+  }
 }
