--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -15,10 +15,11 @@
       color: #4a4a4a;
     }
     input {
-      font-family: 'Montserrat', sans-serif;
       border: none;
       border-bottom: 1px solid #b4b4b4;
       width: 100%;
+      font-size: 16px;
+      border-radius: 0;
     }
   }
 }
