--- a/src/components/Requests/Requests.scss
+++ b/src/components/Requests/Requests.scss
@@ -14,5 +14,14 @@
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
+
+    .Request-school,
+    .Request-location {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      font-size: 12px;
+      margin-right: 12px;
+    }
   }
 }
