--- a/src/components/CreateProfile/CreateProfile.scss
+++ b/src/components/CreateProfile/CreateProfile.scss
@@ -1,6 +1,4 @@
 #CreateProfile {
-  @include page;
-
   #CreateProfile-photo {
     position: relative;
 
@@ -15,24 +13,28 @@
       position: absolute;
       padding: 12px;
       border-radius: 50%;
+      height: 48px;
+      width: 48px;
       bottom: 0;
       left: calc(50% + 32px);
       border: 2px solid var(--se-white);
       background: var(--se-green-primary);
       color: var(--se-white);
+      flex-shrink: 0;
+      flex-grow: 0;
     }
   }
 
   .profile-creation-form-field {
     display: flex;
-    padding: 32px 0;
+    padding: 24px 0;
     justify-content: space-between;
     align-items: flex-start;
     text-align: end;
 
     .se-flex-container {
       margin-top: -8px;
-      width: 70%;
+      width: 64%;
 
       .se-button {
         flex-grow: 1;
@@ -41,23 +43,13 @@
     }
 
     input {
-      border: none;
-      border-bottom: 1px solid black;
-      width: 70%;
+      width: 64%;
       font-size: 16px;
     }
 
     textarea {
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-
-      border: none;
-      outline: none;
       resize: none;
-      border-bottom: 1px solid black;
       width: 70%;
-      font-size: 16px;
     }
   }
 }
