--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -1,82 +1,48 @@
-#Profile {
-  @include page;
-
-  button {
-    width: 90vw;
-    border-radius: 45px;
-    color: white;
-    border: none;
-    background-color: #4ea528;
-  }
-
-  textarea {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-    border: none;
-    outline: none;
-    resize: none;
-    border-bottom: 1px solid #cdcdcd;
-    width: 80%;
-  }
-
-  .profile-edit-form-field {
-    display: flex;
-    padding-bottom: 32px;
-    justify-content: space-between;
-    text-align: end;
-
-    label {
-      color: #4a4a4a;
-      margin-right: 16px;
-    }
-
-    input {
-      border: none;
-      border-bottom: 1px solid #cdcdcd;
-      width: 80%;
-    }
-  }
-
-  #edit-header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    margin-top: 32px;
-  }
-
-  .profile-image-container {
+#EditProfile {
+  #EditProfile-photo {
     position: relative;
-    img {
-      width: 128px;
-      height: 128px;
+
+    #EditProfile-curr-photo {
+      height: 150px;
+      width: 150px;
       object-fit: cover;
       border-radius: 50%;
     }
-    .profile-image-edit-button {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      padding: 8px;
-      bottom: -4px;
-      right: -8px;
-      background-color: #4ea528;
-      color: white;
+
+    #EditProfile-edit-photo {
       position: absolute;
-      border: 4px solid white;
-      cursor: pointer;
+      padding: 12px;
+      border-radius: 50%;
+      height: 48px;
+      width: 48px;
+      bottom: 0;
+      left: calc(50% + 32px);
+      border: 2px solid var(--se-white);
+      background: var(--se-green-primary);
+      color: var(--se-white);
+      flex-shrink: 0;
+      flex-grow: 0;
     }
   }
 
-  h2 {
-    margin-left: 64px;
-    color: #4a4a4a;
-  }
+  .profile-creation-form-field {
+    display: flex;
+    padding: 32px 0;
+    justify-content: space-between;
+    align-items: flex-start;
+    text-align: end;
 
-  aside {
-    color: #b4b4b4;
-    margin-top: 16px;
-    margin-bottom: 32px;
+    label {
+      padding-top: 6px;
+    }
+
+    input {
+      width: 64%;
+    }
+
+    textarea {
+      resize: none;
+      width: 64%;
+    }
   }
 }
