--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,8 +20,8 @@
     padding: 0 16px;
   }
 
-  .se-button.size-small {
-    padding: 8px 12px;
+  .se-button.size-medium {
+    border-radius: 0;
   }
 
   img {
