styling updates, new status update UX for requests

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,7 +1,7 @@
 @import './CreateProfile/CreateProfile.scss';
 @import './EditProfile/EditProfile.scss';
 @import './Error/Error.scss';
-@import './Form/Form.scss';
+@import './CreateRequest/CreateRequest.scss';
 @import './Header/Header.scss';
 @import './Home/Home.scss';
 @import './Loading/Loading.scss';
