Added green to arrows and plus icons, added logo to header

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,6 +5,11 @@
   justify-content: flex-start;
   height: unset;
 
+  .Profile-back{
+    font-size: 25px;
+    color: #4ea528;
+  }
+
   .wrapper {
     width: 100%;
     display: inline;
