--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -38,8 +38,12 @@
       font-size: 20px;
     }
   }
-}
 
-#green {
-  color: #4ea528;
+  #Header-icon{
+    margin-top: 0;
+  }
+
+  #green{
+    color: #4ea528;
+  }
 }
