fixing profile photo squishing

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -16,3 +16,4 @@
 @import './Profiles/Profiles.scss';
 @import './Profile/Profile.scss';
 @import './Conversations/Conversations.scss';
+@import './ProfilePhoto/ProfilePhoto.scss';
