adding install screen to home page

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -17,3 +17,4 @@
 @import './Profile/Profile.scss';
 @import './Conversations/Conversations.scss';
 @import './ProfilePhoto/ProfilePhoto.scss';
+@import './Install/Install.scss';
