--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,2 +1,50 @@
 #Home {
+  padding: 0;
+
+  #Home-banner {
+    padding: 0 16px;
+
+    @include desktop {
+      padding: 0 32px;
+    }
+    position: relative;
+
+    .primary-header {
+      font-weight: 800;
+      text-shadow: 0 2px 2px #30870a;
+      font-size: 40px;
+    }
+
+    .paragraph {
+      max-width: 480px;
+    }
+
+    #Home-banner-img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .se-button {
+    width: calc(100% - 32px);
+    margin-left: 16px;
+
+    @include desktop {
+      width: calc(100% - 64px);
+      margin-left: 32px;
+    }
+  }
+
+  footer {
+    font-size: 12px;
+    color: var(--se-grey-primary);
+    position: fixed;
+    bottom: 16px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+  }
 }
