--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -18,3 +18,4 @@
 @import './Conversations/Conversations.scss';
 @import './ProfilePhoto/ProfilePhoto.scss';
 @import './Install/Install.scss';
+@import './About/About.scss';
