enabled users to edit requests they created

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -2,6 +2,7 @@
 @import './EditProfile/EditProfile.scss';
 @import './Error/Error.scss';
 @import './CreateRequest/CreateRequest.scss';
+@import './EditRequest/EditRequest.scss';
 @import './Header/Header.scss';
 @import './Home/Home.scss';
 @import './Loading/Loading.scss';
